@@ -346,7 +346,7 @@ __END__
 
 Implementation of the JSON Schema Draft 2020-12 "Core" vocabulary, indicated in metaschemas
 with the URI C<https://json-schema.org/draft/2020-12/vocab/core> and formally specified in
-L<https://datatracker.ietf.org/doc/html/draft-bhutton-json-schema-00#section-8>.
+L<https://datatracker.ietf.org/doc/html/draft-bhutton-json-schema-01#section-8>.
 
 Support is also provided for
 
