@@ -2,6 +2,10 @@ Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
           - expanded on the documentation for serializing results.
+          - updated IETF URI references from draft-bhutton-json-schema-00
+            to draft-bhutton-json-schema-01, to reflect the updates to
+            specification draft2020-12 (implementation updates have already
+            been reflected in earlier releases, notably 0.548 and 0.550)
 
 0.552     2022-05-03 03:31:59Z
           - fix result serialization from exceptions (broken in 0.550)
